--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 #
 #Spring data source
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/abb_etaskify?useSSL=false&Timezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Qafqaz123
-spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/abb_etaskify?useSSL=false&Timezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=Qafqaz123
+#spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 
 #
 #Hibernate
 #
-spring.jpa.properties.hibernate.jdbc.batch_size=4
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.jdbc.batch_size=4
+#spring.jpa.properties.hibernate.order_inserts=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.format_sql=true
 
